# kitl

./: .gitignore  README.md
back/: Cargo.toml
back/src/: kitl-server.rs  kitl.rs  main.rs
back/src/kitl_vm/: expr.rs  jexpr.rs  mod.rs
docs/: ki-spec.md
front/: .eslintrc.cjs  .prettierrc.json  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1690279046323-76608f6d99826.mjs
front/public/: browserconfig.xml  site.webmanifest
front/src/: App.tsx  README.md  dark-mode-detect.ts  default-theme.scss  index.css  index.tsx  main.tsx  variables.scss
front/src/block/: Button.tsx  Checkbox.tsx  DropdownButton.tsx  InputCheck.tsx  InputCode.tsx  InputFile.tsx  InputGroup.tsx  InputLabel.tsx  InputText.tsx  RadioButtons.tsx  Spinner.tsx  ToastContainer.tsx  colors.scss  colors.ts  components.scss  index.ts  util.scss
front/src/client/: client-manager.ts  client.ts  clients.ts  executor.ts  i-client.ts  i-file.ts  idbfs.ts  kitl-code.ts  local-client.ts  path.ts  storage.ts
front/src/common/: ab.test.ts  ab.ts  array.ts  assert.ts  box.ts  clipboard.ts  color.ts  dag.ts  def.ts  event.ts  functions.test.ts  functions.ts  geometry.test.ts  geometry.ts  index.ts  json.ts  key.test.ts  key.ts  math.test.ts  math.ts  name-symbols.ts  name.test.ts  name.ts  node.ts  path.test.ts  path.ts  pointer-helper.ts  primitive.test.ts  primitive.ts  size.ts  string.ts  time.ts  types.ts
front/src/components/: EditorMain.css  EditorMain.tsx  EditorRoot.css  EditorRoot.tsx  README.md  helper.ts
(+206 files in other folders)
