[package]
name = "kitl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
axum = "0.6"
hyper = "0.14"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "kitl"
path = "src/kitl.rs"

[[bin]]
name = "kitl-server"
path = "src/kitl-server.rs"
